feat : fix error gajelas karena soalnya juga gajelas
