# routes/api.php
@@ -19,6 +19,7 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
 
+Route::get('/get-all-user', [AuthController::class, 'getAllUser'])->name('getAllUser');
 Route::post('/auth/login', [AuthController::class, 'loginUsers'])->name('loginUsers');
 Route::post('/auth/register', [AuthController::class, 'registerUsers'])->name('registerUsers');
 
